--- a/default-ssl.conf
+++ b/default-ssl.conf
@@ -9,6 +9,8 @@ map $http_upgrade $connection_upgrade {
     ''      close;
 }
 
+# upstream meteor_app { server webapp:3000; }
+
 server {
     listen 443 ssl http2;
     server_name  lucidprogrammer.info;
@@ -26,8 +28,8 @@ server {
         root /opt/letsencrypt/www;
     }
 
-    location / {
-        root /usr/share/nginx/html;
-   }
+    location / { root /usr/share/nginx/html; }
+    # location /{ proxy_set_header Host $host; proxy_set_header X-Real-IP $remote_addr; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_pass http://meteor_app; }
+
 
 }
