--- a/default-ssl.conf
+++ b/default-ssl.conf
@@ -21,8 +21,9 @@ server {
     send_timeout                600s;
 
     ssl on;
-    ssl_certificate      /etc/nginx/ssl/certificate.pem;
-    ssl_certificate_key  /etc/nginx/ssl/certificate.pem;
+
+    ssl_certificate      /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key  /etc/nginx/ssl/privkey.pem;
 
     location /.well-known/acme-challenge {
         root /opt/letsencrypt/www;
