with configurable json file for proxies

--- a/default.conf
+++ b/default.conf
@@ -3,7 +3,8 @@ map $http_upgrade $connection_upgrade {
     ''      close;
 }
 
-# upstream meteor_app { server webapp:3000; }
+# include any upstream available from the upstream conf directory
+include /etc/nginx/conf.d/upstream/*.conf;
 
 server {
     listen 80;
@@ -17,9 +18,8 @@ server {
     location /.well-known/acme-challenge {
         root /opt/letsencrypt/www;
     }
-    # using default nginx welcome page
-    location / { root /usr/share/nginx/html; }
-
-    # location /{ proxy_set_header Host $host; proxy_set_header X-Real-IP $remote_addr; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_pass http://meteor_app; }
+    # using any available locations
+    # if there are no proxies, will put location.default.conf here
+    include /etc/nginx/conf.d/locations/*.conf;
 
 }
