--- a/default-ssl.conf
+++ b/default-ssl.conf
@@ -9,7 +9,8 @@ map $http_upgrade $connection_upgrade {
     ''      close;
 }
 
-# upstream meteor_app { server webapp:3000; }
+# include any upstream available from the upstream conf directory
+include /etc/nginx/conf.d/upstream/*.conf;
 
 server {
     listen 443 ssl http2;
@@ -28,9 +29,8 @@ server {
     location /.well-known/acme-challenge {
         root /opt/letsencrypt/www;
     }
-
-    location / { root /usr/share/nginx/html; }
-    # location /{ proxy_set_header Host $host; proxy_set_header X-Real-IP $remote_addr; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_pass http://meteor_app; }
-
+    # using any available locations
+    # if there are no proxies, will put location.default.conf here
+    include /etc/nginx/conf.d/locations/*.conf;
 
 }
